# lain.la-link-shortener

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  lint-and-format.yml  publish.yml  tests.yml
lain_shorten/: __init__.py  cli.py  main.py  shorten.py
lainla_shorten/: __init__.py  shorten.py
src/lain_shorten/: __main__.py  cli.py  shorten.py  version.py
tests/: test_cli.py  test_shorten.py  test_validation.py
