[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lain_shorten"
version = "1.13"
description = "URL Shortener using s.lain.la API."
readme = "README.md"
authors = [
    { name = "NecRaul", email = "necraul@kuroneko.dev" }
]
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
keywords = [
    "python",
    "link shortener",
    "shortener",
    "lain",
    "lain.la",
    "s.lain.la",
    "kuroneko"
]
dependencies = [
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "urllib3>=2.5.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/NecRaul/lain.la-link-shortener"
Documentation = "https://github.com/NecRaul/lain.la-link-shortener#readme"
Repository = "https://github.com/NecRaul/lain.la-link-shortener"
Issues = "https://github.com/NecRaul/lain.la-link-shortener/issues"

[project.scripts]
lain-shorten = "lain_shorten:main"

[tool.setuptools]
py-modules = ["shorten"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
exclude = '''
(
    \.git
  | \.venv
  | build
  | dist
  | .*\.egg-info
)
'''
