[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lain_shorten"
version = "1.15"
description = "URL Shortener using s.lain.la API."
readme = "README.md"
authors = [{ name = "NecRaul", email = "necraul@kuroneko.dev" }]
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
keywords = [
    "python",
    "link shortener",
    "shortener",
    "lain",
    "lain.la",
    "s.lain.la",
    "kuroneko",
]
dependencies = ["requests"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
clipboard = ["pyperclip"]
dev = ["flake8", "isort", "black", "pre-commit"]
build = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/NecRaul/lain.la-link-shortener"
Documentation = "https://github.com/NecRaul/lain.la-link-shortener#readme"
Repository = "https://github.com/NecRaul/lain.la-link-shortener"
Issues = "https://github.com/NecRaul/lain.la-link-shortener/issues"

[project.scripts]
lain-shorten = "lain_shorten:main"

[tool.setuptools]
py-modules = ["shorten"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
exclude = '''
(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | .*\.egg-info
)
'''

[tool.isort]
profile = "black"
skip_gitignore = true
skip = [".git", ".venv", "__pycache", "build", "dist"]
skip_glob = ["*.egg-info"]
