[build-system]
requires = ["uv_build>=0.9.28"]
build-backend = "uv_build"

[project]
name = "lain-shorten"
version = "1.16"
description = "A simple CLI URL shortener using s.lain.la API, with optional clipboard copy."
readme = "README.md"
authors = [{ name = "NecRaul", email = "necraul@kuroneko.dev" }]
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
keywords = [
  "python",
  "link-shorten",
  "link-shortener",
  "shortener",
  "lain-shorten",
  "lain",
  "kuroneko",
]
requires-python = ">=3.10"
dependencies = ["requests>=2.32.5"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.11.0"]

[project.urls]
Homepage = "https://github.com/NecRaul/lain-shorten"
Documentation = "https://github.com/NecRaul/lain-shorten#readme"
Repository = "https://github.com/NecRaul/lain-shorten"
Issues = "https://github.com/NecRaul/lain-shorten/issues"

[project.scripts]
lain-shorten = "lain_shorten.cli:main"

[dependency-groups]
dev = [
  "pyperclip>=1.11.0",
  "ruff>=0.14.14",
  "ty>=0.0.14",
  "pre-commit>=4.5.1",
  "debugpy>=1.8.20",
  "pytest>=9.0.2",
]

[tool.uv]
default-groups = ["dev"]
python-preference = "only-managed"
trusted-publishing = "always"

[tool.uv.build-backend]
module-name = "lain_shorten"
module-root = "src"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
include = ["pyproject.toml", "src/**/*.py", "tests/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ty.src]
include = ["src/lain_shorten", "tests"]
